# ffmpeg-sdl2-cmake-demo

./: CMakeLists.txt  README.md  main.bk  sdl2_test.bk
include/: encode_pcm_to_mp2.h  encode_yuv_to_h264.h  vPlayer_sdl2.h
src/: CMakeLists.bk  CMakeLists.txt  encode_pcm_to_mp2.cpp  encode_yuv_to_h264.cpp  main.cpp  vPlayer_sdl2.cpp
